--- a/WeebQuizer_server_remote/WeebQuizer_server_remote.csproj
+++ b/WeebQuizer_server_remote/WeebQuizer_server_remote.csproj
@@ -3,9 +3,12 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
+    <PackageReference Include="Pastel" Version="1.3.2" />
     <PackageReference Include="SocketIOClient" Version="2.0.1" />
   </ItemGroup>
 
