--- a/WeebQuizer_server_remote/WeebQuizer_server_remote.csproj
+++ b/WeebQuizer_server_remote/WeebQuizer_server_remote.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <Platforms>AnyCPU;x64</Platforms>
+    <!-- <RuntimeIdentifiers>win10-x64;debian.8-x64</RuntimeIdentifiers> -->
   </PropertyGroup>
 
   <ItemGroup>
